force-app/main/default/objects/InvoiceNumber__mdt/InvoiceNumber__mdt.object-meta.xml
<CustomObject>
    <label>Invoice Number</label>
    <pluralLabel>Invoice Numbers</pluralLabel>
</CustomObject>