force-app/main/default/objects/InvoiceNumber__mdt/fields/NextInvoiceNumber__c.field-meta.xml
<CustomField>
    <fullName>NextInvoiceNumber__c</fullName>
    <defaultValue>1</defaultValue>
    <label>Next Invoice Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>