force-app/main/default/objects/InvoiceNumber__mdt/fields/YEAR__c.field-meta.xml
<CustomField>
    <fullName>YEAR__c</fullName>
    <defaultValue>&quot;2020&quot;</defaultValue>
    <label>Year</label>
    <length>4</length>
    <type>Text</type>
</CustomField>